uipath-commons/main/default/objects/UsaZipCodes__mdt/UsaZipCodes__mdt.object-meta.xml
<CustomObject>
    <label>UsaZipCodes</label>
    <pluralLabel>UsaZipCodes</pluralLabel>
</CustomObject>