uipath-commons/main/default/objects/UsaZipCodes__mdt/fields/City__c.field-meta.xml
<CustomField>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>