uipath-commons/main/default/objects/UsaZipCodes__mdt/fields/Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>