uipath-commons/main/default/objects/UsaZipCodes__mdt/fields/Region__c.field-meta.xml
<CustomField>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>