uipath-commons/main/default/objects/UsaZipCodes__mdt/listViews/Zips_and_Territories.listView-meta.xml
<ListView>
        <fullName>Zips_and_Territories</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Area__c</columns>
        <columns>City__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <filterScope>Everything</filterScope>
        <label>Zips and Territories</label>
        <language>en_US</language>
    </ListView>